# Policy-Analyst

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  README.md  actuarial_tools.py  agentic_orchestrator.py  app.py  contradiction_detector.py  database.py  docker-compose.yml  document_processor.py  hybrid_search.py  index.html  mcp_server.py  performance_monitor.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-info.yml
DOCUMENTATION/: IMPROVEMENT_SUGGESTIONS.md  PROJECT_SUMMARY.md  RESUME_PROJECT_DESCRIPTION.md  SETUP_GUIDE.md
sample_documents/: auto_insurance_policy.txt  health_insurance_policy.txt  home_insurance_policy.txt
utils/: DocsLoader.py  Schemas.py
